feat(#1): Resolve pull-request fix

--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -22,7 +22,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Test
-        run: go test -v ./... -covermode=count -coverprofile=coverage.out
+        run: |
+          go test -v ./... -covermode=count -coverprofile=coverage.out
           go tool cover -func=coverage.out -o=coverage.out
 
       - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
